syntax = "proto3";

package framevideoPackage;

service FrameVideoService{
	rpc getFrame(frame) returns (frameResponse) {}
}

message frame {
  string timestamp       = 1;
  string timestampVideo  = 2;
  bytes  imagedata       = 3;
  int32  width           = 4;
  int32  height          = 5;
  int32  channels        = 6;
}

message frameResponse {
  bool   success = 1;
  string message = 2;
}